# botka

./: .editorconfig  .envrc  .gitignore  Cargo.toml  Justfile  README.md  config.example.yaml  deny.toml  diesel.toml  flake.nix  hashes.nix  pyproject.toml  residents-admin-table.py  rust-toolchain.toml  rustfmt.toml
.cursor/rules/: auto-update-rules.mdc  code-standards.mdc  common-patterns.mdc  general-structure.mdc  modules.mdc  tooling.mdc
.github/workflows/: ci.yml
migrations/2023-09-24-190127_init/: down.sql  up.sql
migrations/2025-03-29-000000_add_ssh_keys/: down.sql  up.sql
migrations/2025-04-16-000000_add_nlp_tables/: down.sql  up.sql
migrations/2025-04-21-000000_add_nlp_debug_info/: down.sql  up.sql
migrations/2025-06-29-000000_temp_open_tokens/: down.sql  up.sql
migrations/2025-06-29-000001_add_borrowed_items_created_at/: down.sql  up.sql
migrations/2025-06-29-000002_add_butler_reminders/: down.sql  up.sql
residents-timeline/: index.ts  package-lock.json  package.json  tsconfig.json
src/: common.rs  config.rs  db.rs  main.rs  metrics.rs  models.rs  modules.rs  schema.rs  tracing_proxy.rs  utils.rs  web_srv.rs
src/modules/: ask_to_visit.rs  basic.rs  borrowed_items.rs  broadcast.rs  butler.rs  camera.rs  dashboard.rs  debates.rs  forward_topic_pins.rs  ldap.rs  mac_monitoring.rs  needs.rs  nlp.rs  polls.rs  rename_closed_topics.rs  resident_tracker.rs  tg_scraper.rs  tldr.rs  updates.rs  userctl.rs  vortex_of_doom.rs  welcome.rs
src/modules/dashboard/: raw.rs
src/modules/nlp/: classification.rs  commands.rs  filtering.rs  memory.rs  mod.rs  processing.rs  types.rs  utils.rs
src/sql/: upsert_tg_chat_topic.sql
src/utils/: diesel_json.rs  dptree_ext.rs  espcam.rs  format_to.rs  ldap.rs  log_error.rs  mikrotik.rs  parsers.rs  replace_urls.rs  status_change.rs  teloxide.rs  wikijs.rs
src/utils/wikijs/: tests.rs
