[package]
name = "f0bot"
version = "0.1.0"
edition = "2021"
authors = ["tar-xzf <tar_xzf@tuta.io>"]
license = "Unlicense OR MIT"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
argh = "0.1.12"
async-openai = "0.14.3"
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.1", features = ["sqlite", "serde_json"] }
diesel-derive-newtype = "2.1.0"
dptree = "0.3.0"
futures = "0.3.28"
git-version = "0.3.5"
gql_client = "1.0.7"
hyper = { version = "0.14.27", features = ["server"] }
itertools = "0.11.0"
log = "0.4.20"
macaddr = { version = "1.0.1", features = ["serde_std"] }
macro_rules_attribute = "0.2.0"
nom = "7.1.3"
pretty_env_logger = "0.5.0"
reqwest = "0.11.20"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
similar = "2.2.1"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.9"
try_match = { version = "0.4.1", default-features = false }

[dependencies.openssl-sys]
version = "*"
features = ["vendored"]

[dev-dependencies]
similar-asserts = { version = "1.5.0", features = ["serde"] }
