[package]
name = "f0bot"
version = "0.1.0"
edition = "2021"
authors = ["tar-xzf <tar_xzf@tuta.io>"]
license = "Unlicense OR MIT"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
argh = "0.1.12"
async-openai = "0.14.3"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.1", features = ["chrono", "sqlite", "serde_json"] }
diesel-derive-newtype = "2.1.0"
dptree = "0.3.0"
futures = "0.3.28"
git-version = "0.3.5"
gql_client = "1.0.7"
hyper = { version = "0.14.27", features = ["server"] }
itertools = "0.11.0"
log = "0.4.20"
macaddr = { version = "1.0.1", features = ["serde_std"] }
macro_rules_attribute = "0.2.0"
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", default-features = false }
nom = "7.1.3"
pretty_env_logger = "0.5.0"
reqwest = "0.11.20"
salvo = { version = "0.58.2", default-features = false, features = [ "http1" ] }
serde = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
shlex = "1.2.0"
similar = "2.2.1"
tap = "1.0.1"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.9"
try_match = { version = "0.4.1", default-features = false }

[dependencies.teloxide]
# TODO: switch back to upstream once merged and released
git = "https://github.com/tar-xzf/teloxide"
rev = "4fe1a083be74bb37956ee8456a6a1dcf0decc614"
features = ["macros"]

[dev-dependencies]
similar-asserts = { version = "1.5.0", features = ["serde"] }
